--- a/dailynews.html
+++ b/dailynews.html
@@ -146,6 +146,10 @@
                 callback();
             });
     }
+    let is_active = true;
+    document.addEventListener("visibilitychange", event => {
+        is_active = !document.hidden;
+    });
     function loadmore_x() {
         loadmore(() => {
             curent_index++;
@@ -158,6 +162,8 @@
                 alert_box.id = "alert_box";
                 alert_box.setAttribute('onclick', "this.style.display = 'none';");
                 document.body.appendChild(alert_box);
+                if (!is_active)
+                    alert("Đã tải xong tất cả!");
             }
         });
     }
@@ -200,7 +206,8 @@
             ["Living your [someday], [today]!", "Brett (someone)"],
             ["Người ta không mắc sai lầm vì dốt mà vì [tưởng mình giỏi]", "Daniil Granin"],
             ["[Tập trung] về cơ bản chỉ là [thoát khỏi cám dỗ]!", "Nguyễn Hải Phong (tui nè ^^)"],
-            ["Rồi chúng ta sẽ [khóc] với những thứ đã từng làm chúng ta [cười]", "Someone"]
+            ["Rồi chúng ta sẽ [khóc] với những thứ đã từng làm chúng ta [cười]", "Someone"],
+            ["Một người lãnh đạo giỏi thì không được phép [mất kiểm soát] hay [than vãn]", "Nguyễn Hải Phong (tui nè ^^)"]
         ], main_title, callback), "Trích dẫn hay"],
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
@@ -208,11 +215,11 @@
         [(main_title, callback) => process_stackoverflow("https://stackoverflow.blog/newsletter/feed/", main_title, callback), "The Overflow"],
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
         [(main_title, callback) => fetch("https://api.allorigins.win/get?url=" + encodeURIComponent("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng")).then(res => res.json()).then(json => process_reddit(json, main_title, callback)), "Reddit"],
-        [(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
         [(main_title, callback) => process_lostbird("https://api.lostbird.vn/lostbird/public/v1/posts?per_page=50", main_title, callback), "Lost bird"],
         ["https://news.google.com/publications/CAAqBwgKMI-apgsw96S-Aw?hl=vi&gl=VN&ceid=VN%3Avi", "VnEconomy"],
         ["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
-        ["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Tin tức chung"],
+        ["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Tin tức chung"]
+        //[(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],,
         //[(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
         //["https://news.google.com/publications/CAAqIQgKIhtDQklTRGdnTWFnb0tDR05oWm1WbUxuWnVLQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "CafeF"],
         //[(main_title, callback) => process_spiderum("https://spiderum.com/api/v1/feed/getAllPosts?type=new&page=1", main_title, callback), "Spiderum"],
@@ -229,7 +236,7 @@
         script_tag.src = "https://www.tomorrow.io/weather/vi/daily/";
         script_tag.style = "width: 100%; height: 100%; border: none; border-radius: 10px;";
         document.body.appendChild(script_tag);
-        script_tag.onload = function() {
+        script_tag.onload = function () {
             callback();
         }
     }
