--- a/pitlyred_view.html
+++ b/pitlyred_view.html
@@ -69,6 +69,7 @@
             border: 0;
             padding: .75rem;
             vertical-align: top;
+            word-break: break-word;
         }
 
         table th {
