--- a/dailynews.html
+++ b/dailynews.html
@@ -659,6 +659,7 @@
     function refresh_token(type, callback) {
         let code = (type == "authorization_code" ? new URL(location.href).searchParams.get("code") : getCookie("ggauth_refresh_token"));
         send_gg_auth(code, (token, refresh_token) => {
+            console.log(token, refresh_token);
             if (refresh_token)
                 setCookie("ggauth_refresh_token", refresh_token, access_token_cookie_exdays);
             callback(token);
