--- a/dailynews.html
+++ b/dailynews.html
@@ -226,7 +226,6 @@
         [(main_title, callback) => process_stackoverflow("https://stackoverflow.blog/newsletter/feed/", main_title, callback), "The Overflow"],
         [(main_title, callback) => process_stackoverflow_podcast("https://stackoverflow.blog/podcast/feed/", main_title, callback), "Stack Overflow Podcast"],
         [(main_title, callback) => process_manhhomienbienthuy("https://manhhomienbienthuy.github.io/feeds/rss.xml", main_title, callback), "Blog manhhomienbienthuy"],
-        [(main_title, callback) => process_lostbird("https://api.lostbird.vn/lostbird/public/v1/posts?per_page=50", main_title, callback), "Lost bird"],
         [(main_title, callback) => process_fb("http://fetchrss.com/rss/61f8c4e41d2c61396121d08261f8c4b70bc83a6c8f771002.xml", main_title, callback), "Kinh tế học giản đơn"],
         ["https://news.google.com/publications/CAAqBwgKMI-apgsw96S-Aw?hl=vi&gl=VN&ceid=VN%3Avi", "VnEconomy"],
         ["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB?hl=vi&gl=VN&ceid=VN%3Avi", "Tin tức chung"]
@@ -237,6 +236,7 @@
         //["https://news.google.com/publications/CAAqJAgKIh5DQklTRUFnTWFnd0tDbU5oWm1WaWFYb3VkbTRvQUFQAQ?hl=vi&gl=VN&ceid=VN%3Avi", "Cafebiz"],
         //[(main_title, callback) => process_sputniknews("https://vn.sputniknews.com/services/widget/lenta/", main_title, callback), "Sputnik News VN"],
         //[(main_title, callback) => process_spiderum("https://spiderum.com/api/v1/feed/getAllPosts?type=new&page=1", main_title, callback), "Spiderum"],
+        //[(main_title, callback) => process_lostbird("https://api.lostbird.vn/lostbird/public/v1/posts?per_page=50", main_title, callback), "Lost bird"],
         //[(main_title, callback) => process_reddit_subfunc("https://www.reddit.com/.json?feed=7fdac8ab65101cd21a5d5e6e6f4dfad19071f347&user=phonghng", main_title, callback), "Reddit"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTENCQVNNd29JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlQQ0FRYUN3b0pMMjB2TURGamNtUTFLZzRLREJJS1Ztbmh1NGQwSUU1aGJTZ0EqKggAKiYICiIgQ0JBU0Vnb0lMMjB2TURWcWFHY1NBblpwR2dKV1RpZ0FQAVAB?hl=vi&gl=VN&ceid=VN%3Avi", "VN"],
         //["https://news.google.com/topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB/sections/CAQiTkNCQVNOQW9JTDIwdk1EVnFhR2NTQW5acEdnSldUaUlPQ0FRYUNnb0lMMjB2TURsdWJWOHFFQW9PRWd4VWFPRzZ2eUJuYWVHN20ya29BQSoqCAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVABUAE?hl=vi&gl=VN&ceid=VN%3Avi", "TG"],
@@ -286,7 +286,7 @@
                     articles = articles.sortBy(o => o.pubDate);
                     console.log(articles);
                     document.body.innerHTML += "<i>Đã tải xong!</i>";
-                    set_whitelist(JSON.parse(JSON.stringify(articles)).pop(), main_title); 
+                    set_whitelist(JSON.parse(JSON.stringify(articles)).pop(), main_title);
                     callback();
                 }
             });
@@ -310,11 +310,11 @@
                 parsed.querySelectorAll("*").forEach(elm => {
                     if (
                         ((elm.style.display == "none")
-                        || (elm.className.includes("hidden"))
-                        || (elm.tagName == "STYLE")
-                        || (elm.tagName == "TITLE")
-                        || (elm.tagName == "META")
-                        || (elm.tagName == "LINK"))
+                            || (elm.className.includes("hidden"))
+                            || (elm.tagName == "STYLE")
+                            || (elm.tagName == "TITLE")
+                            || (elm.tagName == "META")
+                            || (elm.tagName == "LINK"))
                         && elm.innerHTML.match(/\w+ \d{2}, \d{4}/g) == null
                     )
                         parsed = remove_from_dom(parsed, elm);
@@ -727,7 +727,3 @@ else
 send_gg_auth(code_param, loadmore_x); */
     //}
 </script>
-<button onclick="loadmore(this);" style="position: fixed; bottom: 10px; left: auto; display: none;" id="btn">Tải thêm
-    (current: <span>0</span>/
-    <script>document.write(link_list.length);</script>)
-</button>
