--- a/dailynews.html
+++ b/dailynews.html
@@ -215,7 +215,8 @@
             ["[Tập trung] về cơ bản chỉ là [thoát khỏi cám dỗ]!", "Nguyễn Hải Phong (tui nè ^^)"],
             ["Rồi chúng ta sẽ [khóc] với những thứ đã từng làm chúng ta [cười]", "Someone"],
             ["Một người lãnh đạo giỏi thì không được phép [mất kiểm soát] hay [than vãn]", "Nguyễn Hải Phong (tui nè ^^)"],
-            ["Những [bước nhỏ nhất] mà bạn có thể [thực hiện ngay hôm nay] để có thể giúp bạn tiến gần hơn tới [mục tiêu lớn nhất] là gì?", "CafeBiz"]
+            ["Những [bước nhỏ nhất] mà bạn có thể [thực hiện ngay hôm nay] để có thể giúp bạn tiến gần hơn tới [mục tiêu lớn nhất] là gì?", "CafeBiz"],
+            ["Bạn sẽ trở nên nguy hiểm nếu như học được cách [kiểm soát cảm xúc của mình]. Và khi đó, chẳng kẻ nào có thể [hiểu và nắm bắt được con người bạn]!", "Dale Carnegie"]
         ], main_title, callback), "Trích dẫn hay"],
         [(main_title, callback) => process_wikipedia("default", 0, main_title, callback, {}), "Wikipedia"],
         [(main_title, callback) => process_ytb(main_title, callback), "YouTube"],
